/*
  Kubernetes

  No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

  The version of the OpenAPI document: v1.26.9+aa37255

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;

import public "io_k8s_api_core_v1_affinity.proto";
import public "io_k8s_api_core_v1_container.proto";
import public "io_k8s_api_core_v1_ephemeral_container.proto";
import public "io_k8s_api_core_v1_host_alias.proto";
import public "io_k8s_api_core_v1_local_object_reference.proto";
import public "io_k8s_api_core_v1_pod_dns_config.proto";
import public "io_k8s_api_core_v1_pod_os.proto";
import public "io_k8s_api_core_v1_pod_readiness_gate.proto";
import public "io_k8s_api_core_v1_pod_resource_claim.proto";
import public "io_k8s_api_core_v1_pod_scheduling_gate.proto";
import public "io_k8s_api_core_v1_pod_security_context.proto";
import public "io_k8s_api_core_v1_toleration.proto";
import public "io_k8s_api_core_v1_topology_spread_constraint.proto";
import public "io_k8s_api_core_v1_volume.proto";
import public "io_k8s_apimachinery_pkg_api_resource_quantity.proto";

message IoK8sApiCoreV1PodSpec {

  // Optional duration in seconds the pod may be active on the node relative to StartTime before the system will actively try to mark it failed and kill associated containers. Value must be a positive integer.
  int64 activeDeadlineSeconds = 532660514;

  // If specified, the pod's scheduling constraints
  IoK8sApiCoreV1Affinity affinity = 68626729;

  // AutomountServiceAccountToken indicates whether a service account token should be automatically mounted.
  bool automountServiceAccountToken = 480132363;

  // List of containers belonging to the pod. Containers cannot currently be added or removed. There must be at least one container in a Pod. Cannot be updated.
  repeated IoK8sApiCoreV1Container containers = 145245202;

  // Specifies the DNS parameters of a pod. Parameters specified here will be merged to the generated DNS configuration based on DNSPolicy.
  IoK8sApiCoreV1PodDNSConfig dnsConfig = 376589878;

  // Set DNS policy for the pod. Defaults to \"ClusterFirst\". Valid values are 'ClusterFirstWithHostNet', 'ClusterFirst', 'Default' or 'None'. DNS parameters given in DNSConfig will be merged with the policy selected with DNSPolicy. To have DNS options set along with hostNetwork, you have to specify DNS policy explicitly to 'ClusterFirstWithHostNet'.  Possible enum values:  - `\"ClusterFirst\"` indicates that the pod should use cluster DNS first unless hostNetwork is true, if it is available, then fall back on the default (as determined by kubelet) DNS settings.  - `\"ClusterFirstWithHostNet\"` indicates that the pod should use cluster DNS first, if it is available, then fall back on the default (as determined by kubelet) DNS settings.  - `\"Default\"` indicates that the pod should use the default (as determined by kubelet) DNS settings.  - `\"None\"` indicates that the pod should use empty DNS settings. DNS parameters such as nameservers and search paths should be defined via DNSConfig.
  enum DnsPolicyEnum {
    DnsPolicyEnum_CLUSTERFIRST = 0;
    DnsPolicyEnum_CLUSTERFIRSTWITHHOSTNET = 1;
    DnsPolicyEnum_DEFAULT = 2;
    DnsPolicyEnum_NONE = 3;
  }

  DnsPolicyEnum dnsPolicy = 4467782;

  // EnableServiceLinks indicates whether information about services should be injected into pod's environment variables, matching the syntax of Docker links. Optional: Defaults to true.
  bool enableServiceLinks = 163393756;

  // List of ephemeral containers run in this pod. Ephemeral containers may be run in an existing pod to perform user-initiated actions such as debugging. This list cannot be specified when creating a pod, and it cannot be modified by updating the pod spec. In order to add an ephemeral container to an existing pod, use the pod's ephemeralcontainers subresource.
  repeated IoK8sApiCoreV1EphemeralContainer ephemeralContainers = 148563571;

  // HostAliases is an optional list of hosts and IPs that will be injected into the pod's hosts file if specified. This is only valid for non-hostNetwork pods.
  repeated IoK8sApiCoreV1HostAlias hostAliases = 37536824;

  // Use the host's ipc namespace. Optional: Default to false.
  bool hostIPC = 24929622;

  // Host networking requested for this pod. Use the host's network namespace. If this option is set, the ports that will be used must be specified. Default to false.
  bool hostNetwork = 425668762;

  // Use the host's pid namespace. Optional: Default to false.
  bool hostPID = 24936133;

  // Use the host's user namespace. Optional: Default to true. If set to true or not present, the pod will be run in the host user namespace, useful for when the pod needs a feature only available to the host user namespace, such as loading a kernel module with CAP_SYS_MODULE. When set to false, a new userns is created for the pod. Setting false is useful for mitigating container breakout vulnerabilities even allowing users to run their containers as root without actually having root privileges on the host. This field is alpha-level and is only honored by servers that enable the UserNamespacesSupport feature.
  bool hostUsers = 189664961;

  // Specifies the hostname of the Pod If not specified, the pod's hostname will be set to a system-defined value.
  string hostname = 299803597;

  // ImagePullSecrets is an optional list of references to secrets in the same namespace to use for pulling any of the images used by this PodSpec. If specified, these secrets will be passed to individual puller implementations for them to use. More info: https://kubernetes.io/docs/concepts/containers/images#specifying-imagepullsecrets-on-a-pod
  repeated IoK8sApiCoreV1LocalObjectReference imagePullSecrets = 509283998;

  // List of initialization containers belonging to the pod. Init containers are executed in order prior to containers being started. If any init container fails, the pod is considered to have failed and is handled according to its restartPolicy. The name for an init container or normal container must be unique among all containers. Init containers may not have Lifecycle actions, Readiness probes, Liveness probes, or Startup probes. The resourceRequirements of an init container are taken into account during scheduling by finding the highest request/limit for each resource type, and then using the max of of that value or the sum of the normal containers. Limits are applied to init containers in a similar fashion. Init containers cannot currently be added or removed. Cannot be updated. More info: https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
  repeated IoK8sApiCoreV1Container initContainers = 524054851;

  // NodeName is a request to schedule this pod onto a specific node. If it is non-empty, the scheduler simply schedules this pod onto that node, assuming that it fits resource requirements.
  string nodeName = 49138607;

  // NodeSelector is a selector which must be true for the pod to fit on a node. Selector which must match a node's labels for the pod to be scheduled on that node. More info: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
  map<string, string> nodeSelector = 336520193;

  // Specifies the OS of the containers in the pod. Some pod and container fields are restricted if this is set.  If the OS field is set to linux, the following fields must be unset: -securityContext.windowsOptions  If the OS field is set to windows, following fields must be unset: - spec.hostPID - spec.hostIPC - spec.hostUsers - spec.securityContext.seLinuxOptions - spec.securityContext.seccompProfile - spec.securityContext.fsGroup - spec.securityContext.fsGroupChangePolicy - spec.securityContext.sysctls - spec.shareProcessNamespace - spec.securityContext.runAsUser - spec.securityContext.runAsGroup - spec.securityContext.supplementalGroups - spec.containers[*].securityContext.seLinuxOptions - spec.containers[*].securityContext.seccompProfile - spec.containers[*].securityContext.capabilities - spec.containers[*].securityContext.readOnlyRootFilesystem - spec.containers[*].securityContext.privileged - spec.containers[*].securityContext.allowPrivilegeEscalation - spec.containers[*].securityContext.procMount - spec.containers[*].securityContext.runAsUser - spec.containers[*].securityContext.runAsGroup
  IoK8sApiCoreV1PodOS os = 3556;

  // Overhead represents the resource overhead associated with running a pod for a given RuntimeClass. This field will be autopopulated at admission time by the RuntimeClass admission controller. If the RuntimeClass admission controller is enabled, overhead must not be set in Pod create requests. The RuntimeClass admission controller will reject Pod create requests which have the overhead already set. If RuntimeClass is configured and selected in the PodSpec, Overhead will be set to the value defined in the corresponding RuntimeClass, otherwise it will remain unset and treated as zero. More info: https://git.k8s.io/enhancements/keps/sig-node/688-pod-overhead/README.md
  map<string, IoK8sApimachineryPkgApiResourceQuantity> overhead = 529694900;

  // PreemptionPolicy is the Policy for preempting pods with lower priority. One of Never, PreemptLowerPriority. Defaults to PreemptLowerPriority if unset.
  string preemptionPolicy = 170222188;

  // The priority value. Various system components use this field to find the priority of the pod. When Priority Admission Controller is enabled, it prevents users from setting this field. The admission controller populates this field from PriorityClassName. The higher the value, the higher the priority.
  int32 priority = 91719262;

  // If specified, indicates the pod's priority. \"system-node-critical\" and \"system-cluster-critical\" are two special keywords which indicate the highest priorities with the former being the highest priority. Any other name must be defined by creating a PriorityClass object with that name. If not specified, the pod priority will be default or zero if there is no default.
  string priorityClassName = 181885665;

  // If specified, all readiness gates will be evaluated for pod readiness. A pod is ready when all its containers are ready AND all conditions specified in the readiness gates have status equal to \"True\" More info: https://git.k8s.io/enhancements/keps/sig-network/580-pod-readiness-gates
  repeated IoK8sApiCoreV1PodReadinessGate readinessGates = 288943295;

  // ResourceClaims defines which ResourceClaims must be allocated and reserved before the Pod is allowed to start. The resources will be made available to those containers which consume them by name.  This is an alpha field and requires enabling the DynamicResourceAllocation feature gate.  This field is immutable.
  repeated IoK8sApiCoreV1PodResourceClaim resourceClaims = 506180251;

  // Restart policy for all containers within the pod. One of Always, OnFailure, Never. Default to Always. More info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#restart-policy  Possible enum values:  - `\"Always\"`  - `\"Never\"`  - `\"OnFailure\"`
  enum RestartPolicyEnum {
    RestartPolicyEnum_ALWAYS = 0;
    RestartPolicyEnum_NEVER = 1;
    RestartPolicyEnum_ONFAILURE = 2;
  }

  RestartPolicyEnum restartPolicy = 355719136;

  // RuntimeClassName refers to a RuntimeClass object in the node.k8s.io group, which should be used to run this pod.  If no RuntimeClass resource matches the named class, the pod will not be run. If unset or empty, the \"legacy\" RuntimeClass will be used, which is an implicit class with an empty definition that uses the default runtime handler. More info: https://git.k8s.io/enhancements/keps/sig-node/585-runtime-class
  string runtimeClassName = 167362347;

  // If specified, the pod will be dispatched by specified scheduler. If not specified, the pod will be dispatched by default scheduler.
  string schedulerName = 83614185;

  // SchedulingGates is an opaque list of values that if specified will block scheduling the pod. More info:  https://git.k8s.io/enhancements/keps/sig-scheduling/3521-pod-scheduling-readiness.  This is an alpha-level feature enabled by PodSchedulingReadiness feature gate.
  repeated IoK8sApiCoreV1PodSchedulingGate schedulingGates = 177099732;

  // SecurityContext holds pod-level security attributes and common container settings. Optional: Defaults to empty.  See type description for default values of each field.
  IoK8sApiCoreV1PodSecurityContext securityContext = 12276148;

  // DeprecatedServiceAccount is a depreciated alias for ServiceAccountName. Deprecated: Use serviceAccountName instead.
  string serviceAccount = 5395898;

  // ServiceAccountName is the name of the ServiceAccount to use to run this pod. More info: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/
  string serviceAccountName = 526755942;

  // If true the pod's hostname will be configured as the pod's FQDN, rather than the leaf name (the default). In Linux containers, this means setting the FQDN in the hostname field of the kernel (the nodename field of struct utsname). In Windows containers, this means setting the registry value of hostname for the registry key HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Services\\Tcpip\\Parameters to FQDN. If a pod does not have FQDN, this has no effect. Default to false.
  bool setHostnameAsFQDN = 461834023;

  // Share a single process namespace between all of the containers in a pod. When this is set containers will be able to view and signal processes from other containers in the same pod, and the first process in each container will not be assigned PID 1. HostPID and ShareProcessNamespace cannot both be set. Optional: Default to false.
  bool shareProcessNamespace = 67508652;

  // If specified, the fully qualified Pod hostname will be \"<hostname>.<subdomain>.<pod namespace>.svc.<cluster domain>\". If not specified, the pod will not have a domainname at all.
  string subdomain = 96330500;

  // Optional duration in seconds the pod needs to terminate gracefully. May be decreased in delete request. Value must be non-negative integer. The value zero indicates stop immediately via the kill signal (no opportunity to shut down). If this value is nil, the default grace period will be used instead. The grace period is the duration in seconds after the processes running in the pod are sent a termination signal and the time when the processes are forcibly halted with a kill signal. Set this value longer than the expected cleanup time for your process. Defaults to 30 seconds.
  int64 terminationGracePeriodSeconds = 38512331;

  // If specified, the pod's tolerations.
  repeated IoK8sApiCoreV1Toleration tolerations = 114236253;

  // TopologySpreadConstraints describes how a group of pods ought to spread across topology domains. Scheduler will schedule pods in a way which abides by the constraints. All topologySpreadConstraints are ANDed.
  repeated IoK8sApiCoreV1TopologySpreadConstraint topologySpreadConstraints = 130232302;

  // List of volumes that can be mounted by containers belonging to the pod. More info: https://kubernetes.io/docs/concepts/storage/volumes
  repeated IoK8sApiCoreV1Volume volumes = 95550618;

}
