/*
  Kubernetes

  No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

  The version of the OpenAPI document: v1.26.9+aa37255

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;

import public "io_k8s_api_core_v1_exec_action.proto";
import public "io_k8s_api_core_v1_grpc_action.proto";
import public "io_k8s_api_core_v1_http_get_action.proto";
import public "io_k8s_api_core_v1_tcp_socket_action.proto";

message IoK8sApiCoreV1Probe {

  // Exec specifies the action to take.
  IoK8sApiCoreV1ExecAction exec = 3127441;

  // Minimum consecutive failures for the probe to be considered failed after having succeeded. Defaults to 3. Minimum value is 1.
  int32 failureThreshold = 500559364;

  // GRPC specifies an action involving a GRPC port. This is a beta field and requires enabling GRPCContainerProbe feature gate.
  IoK8sApiCoreV1GRPCAction grpc = 3181598;

  // HTTPGet specifies the http request to perform.
  IoK8sApiCoreV1HTTPGetAction httpGet = 168878512;

  // Number of seconds after the container has started before liveness probes are initiated. More info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle#container-probes
  int32 initialDelaySeconds = 84731105;

  // How often (in seconds) to perform the probe. Default to 10 seconds. Minimum value is 1.
  int32 periodSeconds = 123231877;

  // Minimum consecutive successes for the probe to be considered successful after having failed. Defaults to 1. Must be 1 for liveness and startup. Minimum value is 1.
  int32 successThreshold = 10283098;

  // TCPSocket specifies an action involving a TCP port.
  IoK8sApiCoreV1TCPSocketAction tcpSocket = 331194036;

  // Optional duration in seconds the pod needs to terminate gracefully upon probe failure. The grace period is the duration in seconds after the processes running in the pod are sent a termination signal and the time when the processes are forcibly halted with a kill signal. Set this value longer than the expected cleanup time for your process. If this value is nil, the pod's terminationGracePeriodSeconds will be used. Otherwise, this value overrides the value provided by the pod spec. Value must be non-negative integer. The value zero indicates stop immediately via the kill signal (no opportunity to shut down). This is a beta field and requires enabling ProbeTerminationGracePeriod feature gate. Minimum value is 1. spec.terminationGracePeriodSeconds is used if unset.
  int64 terminationGracePeriodSeconds = 38512331;

  // Number of seconds after which the probe times out. Defaults to 1 second. Minimum value is 1. More info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle#container-probes
  int32 timeoutSeconds = 353896995;

}
