/*
  Kubernetes

  No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)

  The version of the OpenAPI document: v1.26.9+aa37255

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message IoK8sApiCoreV1VolumeMount {

  // Path within the container at which the volume should be mounted.  Must not contain ':'.
  string mountPath = 456941534;

  // mountPropagation determines how mounts are propagated from the host to container and the other way around. When not set, MountPropagationNone is used. This field is beta in 1.10.
  string mountPropagation = 22036467;

  // This must match the Name of a Volume.
  string name = 3373707;

  // Mounted read-only if true, read-write otherwise (false or unspecified). Defaults to false.
  bool readOnly = 330812831;

  // Path within the volume from which the container's volume should be mounted. Defaults to \"\" (volume's root).
  string subPath = 258050430;

  // Expanded path within the volume from which the container's volume should be mounted. Behaves similarly to SubPath but environment variable references $(VAR_NAME) are expanded using the container's environment. Defaults to \"\" (volume's root). SubPathExpr and SubPath are mutually exclusive.
  string subPathExpr = 135865833;

}
